src/objects/FieloAlpha__Redemption__c.object
<CustomObject>
    <description>[Rewards] Redemption orders as well as open shopping carts.</description>
    <fields>
        <fullName>FieloAlpha__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Member__c</fullName>
        <description>Member who redeemed the reward</description>
        <label>Member</label>
        <referenceTo>FieloAlpha__Member__c</referenceTo>
        <relationshipLabel>Redemptions</relationshipLabel>
        <relationshipName>Redemptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Origin__c</fullName>
        <description>Where the redemption was made: in the back end, in the front end or via a mobile device.</description>
        <inlineHelpText>Indicate whether the redemption was made via the back end, the front end or a mobile device.</inlineHelpText>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>BackEnd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FrontEnd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__PointsDiscount__c</fullName>
        <label>Points Discount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Points__c</fullName>
        <description>Points involved on the redemption</description>
        <label>Points</label>
        <summarizedField>FieloAlpha__RedemptionItem__c.FieloAlpha__ItemPoints__c</summarizedField>
        <summaryFilterItems>
            <field>FieloAlpha__RedemptionItem__c.FieloAlpha__Status__c</field>
            <operation>notEqual</operation>
            <value>Reverted</value>
        </summaryFilterItems>
        <summaryForeignKey>FieloAlpha__RedemptionItem__c.FieloAlpha__Redemption__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Price__c</fullName>
        <description>Price of the reward in the moment that the reward was redeemed.</description>
        <label>Price</label>
        <summarizedField>FieloAlpha__RedemptionItem__c.FieloAlpha__RewardItemPrice__c</summarizedField>
        <summaryForeignKey>FieloAlpha__RedemptionItem__c.FieloAlpha__Redemption__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Status__c</fullName>
        <description>The status of this redemption. Possible status values are: Open, Closed, Pending or Rejected.</description>
        <inlineHelpText>Here you can see the redemption status. Redemptions can be Open, Closed, Pending or Rejected. Press the Help button above for more info.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__TotalItems__c</fullName>
        <description>Quantity of items of the redemption (Order).</description>
        <label>Total Items</label>
        <summarizedField>FieloAlpha__RedemptionItem__c.FieloAlpha__Quantity__c</summarizedField>
        <summaryForeignKey>FieloAlpha__RedemptionItem__c.FieloAlpha__Redemption__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>FieloAlpha__Transaction__c</referenceTo>
        <relationshipLabel>Redemptions</relationshipLabel>
        <relationshipName>Redemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Redemption</label>
    <listViews>
        <fullName>FieloAlpha__All_Redemptions</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Member__c</columns>
        <columns>FieloAlpha__TotalItems__c</columns>
        <columns>FieloAlpha__Origin__c</columns>
        <columns>FieloAlpha__Points__c</columns>
        <columns>FieloAlpha__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Redemptions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloAlpha__Closed</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Member__c</columns>
        <columns>FieloAlpha__Origin__c</columns>
        <columns>FieloAlpha__Points__c</columns>
        <columns>FieloAlpha__Price__c</columns>
        <columns>FieloAlpha__Status__c</columns>
        <columns>FieloAlpha__TotalItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloAlpha__Status__c</field>
            <operation>equals</operation>
            <value>Close</value>
        </filters>
        <label>Closed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloAlpha__Open</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Member__c</columns>
        <columns>FieloAlpha__Origin__c</columns>
        <columns>FieloAlpha__Points__c</columns>
        <columns>FieloAlpha__Price__c</columns>
        <columns>FieloAlpha__Status__c</columns>
        <columns>FieloAlpha__TotalItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloAlpha__Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloAlpha__Pending</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Member__c</columns>
        <columns>FieloAlpha__Origin__c</columns>
        <columns>FieloAlpha__Points__c</columns>
        <columns>FieloAlpha__Price__c</columns>
        <columns>FieloAlpha__Status__c</columns>
        <columns>FieloAlpha__TotalItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloAlpha__Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloAlpha__Rejected</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Member__c</columns>
        <columns>FieloAlpha__Origin__c</columns>
        <columns>FieloAlpha__Points__c</columns>
        <columns>FieloAlpha__Price__c</columns>
        <columns>FieloAlpha__Status__c</columns>
        <columns>FieloAlpha__TotalItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloAlpha__Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloAlpha__This_Week</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Member__c</columns>
        <columns>FieloAlpha__Origin__c</columns>
        <columns>FieloAlpha__Points__c</columns>
        <columns>FieloAlpha__Price__c</columns>
        <columns>FieloAlpha__Status__c</columns>
        <columns>FieloAlpha__TotalItems__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Week</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OR-{000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redemptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloAlpha__Closed_Order</fullName>
        <active>false</active>
        <errorConditionFormula>AND(   ISPICKVAL(FieloAlpha__Status__c, &apos;Close&apos;) ,ISCHANGED(FieloAlpha__Points__c) )</errorConditionFormula>
        <errorMessage>The order is closed.</errorMessage>
    </validationRules>
</CustomObject>